moved folders into assets folder, added smooth scroll jquery to page and fixed nav alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-body {
-
-}
-
 /* Header styling */
 .social-icons {
 	height: 5%;
@@ -60,13 +56,13 @@ body {
 
 /* Navigation styling */
 nav {
-	margin-left: 35%;
+	margin-left: 22%;
 }
 
 nav ul li {
 	float: left;
 	list-style-type: none;
-	margin-right: 50px;
+	margin-right: 15%;
 }
 
 .Rectangle_148 {
@@ -87,8 +83,6 @@ nav ul li {
 	font-family: "Raleway";
 	padding-top: 44px;
 	border-bottom: 0px 0px 1px 0px solid grey;
-	border-shadow: 10;
-
 }
 
 #nav a {
@@ -119,6 +113,7 @@ nav ul li {
 
 #about p {
 padding: 0 20% 5% 20%;
+text-align: left;
 
 }
 
